set(COMPONENT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(COMPONENT_INCLUDE_DIRS ${COMPONENT_DIR}/include)
set(COMPONENT_PRIVATE_INCLUDE_DIRS ${COMPONENT_DIR}/src)
set(COMPONENT_EMBED_TXTFILES "")
set(COMPONENT_SRCS_CPP "")

macro(brookesia_hal_adaptor_append_sources)
    list(APPEND COMPONENT_SRCS_CPP ${ARGN})
endmacro()

macro(brookesia_hal_adaptor_optional_private_requires condition)
    if(${condition})
        idf_component_optional_requires(PRIVATE ${ARGN})
    endif()
endmacro()

set(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER FALSE)
set(BROOKESIA_HAL_ADAPTOR_NEEDS_LITTLEFS FALSE)
set(BROOKESIA_HAL_ADAPTOR_NEEDS_SPIFFS FALSE)
set(BROOKESIA_HAL_ADAPTOR_NEEDS_FATFS FALSE)
set(BROOKESIA_HAL_ADAPTOR_NEEDS_WEAR_LEVELLING FALSE)

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_GENERAL_DEVICE)
    file(GLOB_RECURSE GENERAL_SRCS_CPP ${COMPONENT_DIR}/src/general/*.cpp)
    brookesia_hal_adaptor_append_sources(${GENERAL_SRCS_CPP})
    set(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER TRUE)
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_AUDIO_DEVICE)
    file(GLOB_RECURSE AUDIO_SRCS_CPP ${COMPONENT_DIR}/src/audio/*.cpp)
    brookesia_hal_adaptor_append_sources(${AUDIO_SRCS_CPP})
    set(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER TRUE)
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_DISPLAY_DEVICE)
    file(GLOB_RECURSE DISPLAY_SRCS_CPP ${COMPONENT_DIR}/src/display/*.cpp)
    brookesia_hal_adaptor_append_sources(${DISPLAY_SRCS_CPP})
    set(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER TRUE)
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_STORAGE_DEVICE)
    brookesia_hal_adaptor_append_sources(${COMPONENT_DIR}/src/storage/device.cpp)
    if(CONFIG_BROOKESIA_HAL_ADAPTOR_STORAGE_ENABLE_GENERAL_FS_IMPL)
        brookesia_hal_adaptor_append_sources(${COMPONENT_DIR}/src/storage/general_fs_impl.cpp)

        if(CONFIG_BROOKESIA_HAL_ADAPTOR_STORAGE_GENERAL_FS_ENABLE_SPIFFS)
            set(BROOKESIA_HAL_ADAPTOR_NEEDS_SPIFFS TRUE)
            set(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER TRUE)
        endif()
        if(CONFIG_BROOKESIA_HAL_ADAPTOR_STORAGE_GENERAL_FS_ENABLE_LITTLEFS)
            set(BROOKESIA_HAL_ADAPTOR_NEEDS_LITTLEFS TRUE)
        endif()
        if(CONFIG_BROOKESIA_HAL_ADAPTOR_STORAGE_GENERAL_FS_ENABLE_FATFS_FLASH)
            set(BROOKESIA_HAL_ADAPTOR_NEEDS_FATFS TRUE)
            set(BROOKESIA_HAL_ADAPTOR_NEEDS_WEAR_LEVELLING TRUE)
        endif()
        if(CONFIG_BROOKESIA_HAL_ADAPTOR_STORAGE_GENERAL_FS_ENABLE_SDCARD)
            set(BROOKESIA_HAL_ADAPTOR_NEEDS_FATFS TRUE)
            set(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER TRUE)
        endif()
    endif()
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_POWER_DEVICE)
    file(GLOB_RECURSE POWER_SRCS_CPP ${COMPONENT_DIR}/src/power/*.cpp)
    brookesia_hal_adaptor_append_sources(${POWER_SRCS_CPP})
    set(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER TRUE)
endif()

#
# Register Component
#
idf_component_register(
    SRCS ${COMPONENT_SRCS_C} ${COMPONENT_SRCS_CPP}
    INCLUDE_DIRS ${COMPONENT_INCLUDE_DIRS}
    PRIV_INCLUDE_DIRS ${COMPONENT_PRIVATE_INCLUDE_DIRS}
    REQUIRES ${COMPONENT_REQUIRES}
    EMBED_TXTFILES ${COMPONENT_EMBED_TXTFILES}
)

brookesia_hal_adaptor_optional_private_requires(BROOKESIA_HAL_ADAPTOR_NEEDS_BOARD_MANAGER
    esp_board_manager
    espressif__esp_board_manager
)
brookesia_hal_adaptor_optional_private_requires(BROOKESIA_HAL_ADAPTOR_NEEDS_SPIFFS spiffs)
brookesia_hal_adaptor_optional_private_requires(BROOKESIA_HAL_ADAPTOR_NEEDS_LITTLEFS
    littlefs
    joltwallet__littlefs
)
brookesia_hal_adaptor_optional_private_requires(BROOKESIA_HAL_ADAPTOR_NEEDS_FATFS fatfs)
brookesia_hal_adaptor_optional_private_requires(BROOKESIA_HAL_ADAPTOR_NEEDS_WEAR_LEVELLING wear_levelling)

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_GENERAL_DEVICE)
    set(BROOKESIA_HAL_ADAPTOR_GENERAL_DEVICE_PLUGIN_SYMBOL general_device_symbol)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        BROOKESIA_HAL_ADAPTOR_GENERAL_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_ADAPTOR_GENERAL_DEVICE_PLUGIN_SYMBOL}
    )
    target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_ADAPTOR_GENERAL_DEVICE_PLUGIN_SYMBOL}")
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_AUDIO_DEVICE)
    set(BROOKESIA_HAL_ADAPTOR_AUDIO_DEVICE_PLUGIN_SYMBOL audio_codec_device_symbol)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        BROOKESIA_HAL_ADAPTOR_AUDIO_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_ADAPTOR_AUDIO_DEVICE_PLUGIN_SYMBOL}
    )
    target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_ADAPTOR_AUDIO_DEVICE_PLUGIN_SYMBOL}")
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_DISPLAY_DEVICE)
    set(BROOKESIA_HAL_ADAPTOR_DISPLAY_DEVICE_PLUGIN_SYMBOL display_lcd_device_symbol)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        BROOKESIA_HAL_ADAPTOR_DISPLAY_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_ADAPTOR_DISPLAY_DEVICE_PLUGIN_SYMBOL}
    )
    target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_ADAPTOR_DISPLAY_DEVICE_PLUGIN_SYMBOL}")
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_STORAGE_DEVICE AND
    (CONFIG_BROOKESIA_HAL_ADAPTOR_STORAGE_ENABLE_GENERAL_FS_IMPL))
    set(BROOKESIA_HAL_ADAPTOR_STORAGE_DEVICE_PLUGIN_SYMBOL storage_device_symbol)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        BROOKESIA_HAL_ADAPTOR_STORAGE_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_ADAPTOR_STORAGE_DEVICE_PLUGIN_SYMBOL}
    )
    target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_ADAPTOR_STORAGE_DEVICE_PLUGIN_SYMBOL}")
endif()

if(CONFIG_BROOKESIA_HAL_ADAPTOR_ENABLE_POWER_DEVICE)
    set(BROOKESIA_HAL_ADAPTOR_POWER_DEVICE_PLUGIN_SYMBOL power_device_symbol)
    target_compile_definitions(${COMPONENT_LIB} PRIVATE
        BROOKESIA_HAL_ADAPTOR_POWER_DEVICE_PLUGIN_SYMBOL=${BROOKESIA_HAL_ADAPTOR_POWER_DEVICE_PLUGIN_SYMBOL}
    )
    target_link_libraries(${COMPONENT_LIB} PRIVATE "-u ${BROOKESIA_HAL_ADAPTOR_POWER_DEVICE_PLUGIN_SYMBOL}")
endif()
